--- a/firstapp/templates/firstapp/base.html
+++ b/firstapp/templates/firstapp/base.html
@@ -7,7 +7,7 @@
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="{% static '/css/firstapp.css' %}">
 
-    <title>{% block title %}farmanapp{% endblock %}</title>
+    <title>{% block title %}farmanapp index{% endblock %}</title>
 </head>
 <body>
 
